<resources>
    <string name="app_name">InClass07</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login_text">LOGIN</string>
    <string name="Email_text">Email</string>
    <string name="password_text">password</string>
    <string name="Register_text">Register</string>
    <string name="retype_Password">retype_password</string>
    <string name="name_text">Name</string>
    <string name="Notes_text">Notes</string>
    <string name="login_data">nothing</string>
    <string name="logOut">logout</string>
    <string name="Profile_text">Profile</string>
    <string name="Back_text" />
    <string name="back">back</string>
    <string name="back_text">back</string>
    <string name="Name_val">Name</string>


</resources>